[Complete] jQuery Plugins

--- a/KSODotNetCore.HTML/index.html
+++ b/KSODotNetCore.HTML/index.html
@@ -59,6 +59,7 @@
   <script src="https://cdn.jsdelivr.net/npm/notiflix@3.2.7/dist/notiflix-aio-3.2.7.min.js"
     integrity="sha256-G6sj3uSY1Rtnyomq54b5wiwwe2+A5Zym254DHutrXM4=" crossorigin="anonymous"></script>
 
+  <script src="custom.js"></script>
   <script src="blog.js"></script>
 </body>
 
